added overwrite for footer to be position:relative for 8 and 100

--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -157,7 +157,7 @@
             </section>
         </div>
     </body>
-    <footer>
+    <footer style="position: relative">
         <div class="text-wrapper">
             Holberton School
         </div>
