--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -103,7 +103,7 @@
             </section>
         </div>
     </body>
-    <footer>
+    <footer style="position: relative">
         <div class="text-wrapper">
             Holberton School
         </div>
