fixed all the validator issues

--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <title>HBnB</title>
         <style>
             header {background-color:#FF0000; height:70px; width:100%;}
             body {margin:0; padding:0;}
@@ -7,13 +9,13 @@
             div {position:relative; float:left; top:50%; left:50%; transform:translate(-50%,-50%);}
         </style>
     </head>
-    <header>
-    </header>
     <body>
+        <header>
+        </header>
+        <footer>
+            <div>
+                Holberton School
+            </div>
+        </footer>
     </body>
-    <footer>
-        <div>
-            Holberton School
-        </div>
-    </footer>
 </html>
