--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -1,27 +1,28 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
     <head>
+        <title>AirBnB clone</title>
         <link rel="stylesheet" type="text/css" href="styles/4-common.css">
         <link rel="stylesheet" type="text/css" href="styles/3-header.css">
         <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
         <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
         <link rel="stylesheet" type="text/css" href="styles/100-places.css">
-        <title>AirBnB clone</title>
         <link rel="icon" href="images/icon.png">
     </head>
-    <header>
-        <embed src="images/logo.png"/>
-    </header>
     <body>
+        <header>
+            <embed src="images/logo.png"/>
+        </header>
         <div class="container">
             <section class="filters">
                 <div class="locations">
                     <h3>States</h3>
                     <h4>California, Arizona...</h4>
                     <ul class="popover">
-                            <h2>Arizona:</h2>
+                            <li><h2>Arizona:</h2></li>
                             <li>Phoenix</li>
                             <li>Tucson</li>
-                            <h2>California:</h2>
+                            <li><h2>California:</h2></li>
                             <li>San Francisco</li>
                             <li>Los Altos</li>
                     </ul>
@@ -79,7 +80,7 @@
                                 <p>Excelent!</p>
                             </li>
                         </ul>
-                    </div>                    
+                    </div>
                 </article>
                 <article>
                     <h2>Tiny house</h2>
@@ -156,10 +157,10 @@
                 </article>
             </section>
         </div>
+        <footer style="position: relative">
+            <div class="text-wrapper">
+                Holberton School
+            </div>
+        </footer>
     </body>
-    <footer style="position: relative">
-        <div class="text-wrapper">
-            Holberton School
-        </div>
-    </footer>
 </html>
