--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,16 +1,17 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <title>AirBnB clone</title>
         <link rel="stylesheet" type="text/css" href="styles/4-common.css">
         <link rel="stylesheet" type="text/css" href="styles/3-header.css">
         <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
         <link rel="stylesheet" type="text/css" href="styles/5-filters.css">
-        <title>AirBnB clone</title>
         <link rel="icon" href="images/icon.png">
     </head>
-    <header>
-        <embed src="images/logo.png"/>
-    </header>
     <body>
+        <header>
+            <embed src="images/logo.png"/>
+        </header>
         <div class="container">
             <section class="filters">
                 <div class="locations">
@@ -24,10 +25,10 @@
                 <button type="button">Search</button>
             </section>
         </div>
+        <footer>
+            <div class="text-wrapper">
+                Holberton School
+            </div>
+        </footer>
     </body>
-    <footer>
-        <div class="text-wrapper">
-            Holberton School
-        </div>
-    </footer>
 </html>
