--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,19 +1,20 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <title>AirBnB clone</title>
         <link rel="stylesheet" type="text/css" href="styles/3-common.css">
         <link rel="stylesheet" type="text/css" href="styles/3-header.css">
         <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-        <title>AirBnB clone</title>
         <link rel="icon" href="images/icon.png">
     </head>
-    <header>
-        <embed src="images/logo.png"/>
-    </header>
     <body>
+        <header>
+            <embed src="images/logo.png"/>
+        </header>
+        <footer>
+            <div class="text-wrapper">
+                Holberton School
+            </div>
+        </footer>
     </body>
-    <footer>
-        <div class="text-wrapper">
-            Holberton School
-        </div>
-    </footer>
 </html>
