--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,26 +1,27 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <title>AirBnB clone</title>
         <link rel="stylesheet" type="text/css" href="styles/4-common.css">
         <link rel="stylesheet" type="text/css" href="styles/3-header.css">
         <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
         <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
-        <title>AirBnB clone</title>
         <link rel="icon" href="images/icon.png">
     </head>
-    <header>
-        <embed src="images/logo.png"/>
-    </header>
     <body>
+        <header>
+            <embed src="images/logo.png"/>
+        </header>
         <div class="container">
             <section class="filters">
                 <div class="locations">
                     <h3>States</h3>
                     <h4>California, Arizona...</h4>
                     <ul class="popover">
-                            <h2>Arizona:</h2>
+                            <li><h2>Arizona:</h2></li>
                             <li>Phoenix</li>
                             <li>Tucson</li>
-                            <h2>California:</h2>
+                            <li><h2>California:</h2></li>
                             <li>San Francisco</li>
                             <li>Los Altos</li>
                     </ul>
@@ -38,10 +39,10 @@
                 <button type="button">Search</button>
             </section>
         </div>
+        <footer>
+            <div class="text-wrapper">
+                Holberton School
+            </div>
+        </footer>
     </body>
-    <footer>
-        <div class="text-wrapper">
-            Holberton School
-        </div>
-    </footer>
 </html>
