--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
         <title>AirBnB clone</title>
         <link rel="stylesheet" type="text/css" href="styles/4-common.css">
